style: :art: Finish header styles

--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,24 @@
 		<title>Notifications page | JabssDev</title>
 		<link rel="stylesheet" href="./output.css" />
 	</head>
-	<body>
-		<h1>Notifications</h1>
-		3 Mark all as read Mark Webber reacted to your recent post My first tournament today! 1m ago Angela Gray followed you 5m ago Jacob Thompson has joined your group Chess Club 1 day ago Rizky
-		Hasanuddin sent you a private message 5 days ago Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.
-		Kimberly Smith commented on your picture 1 week ago Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate 2 weeks ago Anna Kim left the group Chess Club 2
-		weeks ago
+	<body class="py-6 px-4">
+		<header class="flex justify-between pb-4 items-center">
+			<div class="flex items-center">
+				<h1 class="text-xl font-[800] mr-3">Notifications</h1>
+				<span class="bg-primary-blue text-white px-2.5 rounded-md font-[800]">3</span>
+			</div>
+			<button class="text-secundary-dgblue font-[500]">Mark all as read</button>
+		</header>
+		<section>
+			<p>Mark Webber reacted to your recent post My first tournament today! 1m ago</p>
+			<p>Angela Gray followed you 5m ago</p>
+			<p>Jacob Thompson has joined your group Chess Club 1 day ago</p>
+			<p>Rizky Hasanuddin sent you a private message 5 days ago</p>
+			<p>Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.</p>
+			<p>Kimberly Smith commented on your picture 1 week ago</p>
+			<p>Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate 2 weeks ago</p>
+			<p>Anna Kim left the group Chess Club 2 weeks ago</p>
+		</section>
 
 		<div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.</div>
 	</body>
