style: :art: Finish styles of the first notification

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,21 @@
 		<header class="flex justify-between pb-4 items-center">
 			<div class="flex items-center">
 				<h1 class="text-xl font-[800] mr-3">Notifications</h1>
-				<span class="bg-primary-blue text-white px-2.5 rounded-md font-[800]">3</span>
+				<span class="bg-primary-blue text-white px-3 rounded-md font-[800]">3</span>
 			</div>
 			<button class="text-secundary-dgblue font-[500]">Mark all as read</button>
 		</header>
 		<section>
-			<p>Mark Webber reacted to your recent post My first tournament today! 1m ago</p>
+			<article class="flex justify-center gap-4 p-3 mb-4 bg-secundary-lgblue1 rounded-lg">
+				<img class="h-10" src="./assets/images/avatar-mark-webber.webp" alt="Perfil de Mark Webber" />
+				<div>
+					<p class="text-secundary-dgblue font-[500] leading-5">
+						<span class="font-[800] text-black">Mark Webber</span> reacted to your recent post <strong>My first tournament today!</strong
+						><span class="ml-2 relative after:content-[''] after:absolute after:top-[30%] after:h-2 after:w-2 after:bg-primary-red after:rounded-[50%]"></span>
+					</p>
+					<span class="text-secundary-gblue">1m ago</span>
+				</div>
+			</article>
 			<p>Angela Gray followed you 5m ago</p>
 			<p>Jacob Thompson has joined your group Chess Club 1 day ago</p>
 			<p>Rizky Hasanuddin sent you a private message 5 days ago</p>
