--- a/src/index.html
+++ b/src/index.html
@@ -7,84 +7,93 @@
 		<title>Notifications page | JabssDev</title>
 		<link rel="stylesheet" href="./output.css" />
 	</head>
-	<body class="py-6 px-4">
-		<header class="flex justify-between pb-4 items-center">
-			<div class="flex items-center">
-				<h1 class="text-xl font-[800] mr-3">Notifications</h1>
-				<span class="bg-primary-blue text-white px-3 rounded-md font-[500]">3</span>
+	<body class="py-6 px-4 sm:w-screen sm:flex sm:justify-center sm:bg-secundary-lgblue1">
+		<div class="container bg-white sm:max-w-[675px] sm:my-9 sm:px-6 sm:pt-6 sm:rounded-lg sm:shadow-md">
+			<header class="flex justify-between pb-4 items-center">
+				<div class="flex items-center">
+					<h1 class="text-xl font-[800] mr-3">Notifications</h1>
+					<span class="bg-primary-blue text-white px-3 rounded-md font-[500]">3</span>
+				</div>
+				<button class="text-secundary-dgblue font-[500] hover:text-primary-blue">Mark all as read</button>
+			</header>
+			<section>
+				<article class="flex justify-start gap-4 p-3 mb-3 bg-secundary-lgblue1 rounded-lg">
+					<img class="h-10" src="./assets/images/avatar-mark-webber.webp" alt="Perfil de Mark Webber" />
+					<div>
+						<p class="text-secundary-dgblue font-[500] leading-5">
+							<span class="font-[800] text-black hover:text-primary-blue cursor-pointer">Mark Webber</span> reacted to your recent post
+							<strong class="hover:text-primary-blue cursor-pointer">My first tournament today!</strong
+							><span class="ml-2 relative after:content-[''] after:absolute after:top-[40%] after:h-2 after:w-2 after:bg-primary-red after:rounded-[50%]"></span>
+						</p>
+						<span class="text-secundary-gblue">1m ago</span>
+					</div>
+				</article>
+				<article class="flex justify-start gap-4 p-3 mb-4 bg-secundary-lgblue1 rounded-lg">
+					<img class="h-10" src="./assets/images/avatar-angela-gray.webp" alt="Perfil de Angela Gray" />
+					<div>
+						<p class="text-secundary-dgblue font-[500] leading-5">
+							<span class="font-[800] text-black hover:text-primary-blue cursor-pointer">Angela Gray</span> followed you
+							<span class="ml-2 relative after:content-[''] after:absolute after:top-[40%] after:h-2 after:w-2 after:bg-primary-red after:rounded-[50%]"></span>
+						</p>
+						<span class="text-secundary-gblue">5m ago</span>
+					</div>
+				</article>
+				<article class="flex justify-start gap-4 p-3 mb-3 bg-secundary-lgblue1 rounded-lg">
+					<img class="h-10" src="./assets/images//avatar-jacob-thompson.webp" alt="Perfil de Jacob Thompson" />
+					<div>
+						<p class="text-secundary-dgblue font-[500] leading-5">
+							<span class="font-[800] text-black hover:text-primary-blue cursor-pointer">Jacob Thompson</span> has joined your group
+							<strong class="hover:text-primary-blue cursor-pointer">Chess Club</strong
+							><span class="ml-2 relative after:content-[''] after:absolute after:top-[40%] after:h-2 after:w-2 after:bg-primary-red after:rounded-[50%]"></span>
+						</p>
+						<span class="text-secundary-gblue">1 day ago</span>
+					</div>
+				</article>
+				<article class="flex justify-start gap-4 p-3 mb-3">
+					<img class="h-10" src="./assets/images/avatar-rizky-hasanuddin.webp" alt="Perfil de Jacob Thompson" />
+					<div>
+						<p class="text-secundary-dgblue font-[500] leading-5"><span class="font-[800] text-black hover:text-primary-blue cursor-pointer">Rizky Hasanuddin</span> sent you a private message</p>
+						<span class="text-secundary-gblue">5 days ago</span>
+						<p class="text-secundary-dgblue font-[500] leading-5 mt-4 border border-solid p-3.5 rounded-md hover:bg-secundary-lgblue1 cursor-pointer">
+							Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.
+						</p>
+					</div>
+				</article>
+				<article class="flex justify-between mb-3 p-3">
+					<div class="flex justify-start gap-4">
+						<img class="h-10" src="./assets/images/avatar-kimberly-smith.webp" alt="Perfil de Kimberly Smith" />
+						<div>
+							<p class="text-secundary-dgblue font-[500] leading-5"><span class="font-[800] text-black hover:text-primary-blue cursor-pointer">Kimberly Smith</span> commented on your picture</p>
+							<span class="text-secundary-gblue">1 week ago</span>
+						</div>
+					</div>
+					<img class="h-10 hover:scale-105 cursor-pointer" src="./assets/images/image-chess.webp" alt="Foto de mujer jugando ajedrez" />
+				</article>
+				<article class="flex justify-start gap-4 p-3 mb-3">
+					<img class="h-10" src="./assets/images/avatar-nathan-peterson.webp" alt="Perfil de Nathan Peterson" />
+					<div>
+						<p class="text-secundary-dgblue font-[500] leading-5">
+							<span class="font-[800] text-black hover:text-primary-blue cursor-pointer">Nathan Peterson</span> reacted to your recent post
+							<strong class="hover:text-primary-blue cursor-pointer">5 end-game strategies to increase your win rate</strong>
+						</p>
+						<span class="text-secundary-gblue">2 weeks ago</span>
+					</div>
+				</article>
+				<article class="flex justify-start gap-4 p-3 mb-3">
+					<img class="h-10" src="./assets/images/avatar-anna-kim.webp" alt="Perfil de Anna Kim" />
+					<div>
+						<p class="text-secundary-dgblue font-[500] leading-5">
+							<span class="font-[800] text-black hover:text-primary-blue cursor-pointer">Anna Kim</span> left the group <strong class="hover:text-primary-blue cursor-pointer">Chess Club</strong>
+						</p>
+						<span class="text-secundary-gblue">2 weeks ago</span>
+					</div>
+				</article>
+			</section>
+			<hr class="mb-4" />
+			<div class="attribution text-center text-secundary-dgblue font-[500] leading-5 mb-2">
+				Challenge by <a class="text-primary-blue font-[800]" href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. <br />
+				Coded by <a class="text-primary-blue font-[800]" href="https://github.com/jabssdev" target="_blank">JabssDev</a>.
 			</div>
-			<button class="text-secundary-dgblue font-[500]">Mark all as read</button>
-		</header>
-		<section>
-			<article class="flex justify-start gap-4 p-3 mb-3 bg-secundary-lgblue1 rounded-lg">
-				<img class="h-10" src="./assets/images/avatar-mark-webber.webp" alt="Perfil de Mark Webber" />
-				<div>
-					<p class="text-secundary-dgblue font-[500] leading-5">
-						<span class="font-[800] text-black">Mark Webber</span> reacted to your recent post <strong>My first tournament today!</strong
-						><span class="ml-2 relative after:content-[''] after:absolute after:top-[40%] after:h-2 after:w-2 after:bg-primary-red after:rounded-[50%]"></span>
-					</p>
-					<span class="text-secundary-gblue">1m ago</span>
-				</div>
-			</article>
-			<article class="flex justify-start gap-4 p-3 mb-4 bg-secundary-lgblue1 rounded-lg">
-				<img class="h-10" src="./assets/images/avatar-angela-gray.webp" alt="Perfil de Angela Gray" />
-				<div>
-					<p class="text-secundary-dgblue font-[500] leading-5">
-						<span class="font-[800] text-black">Angela Gray</span> followed you
-						<span class="ml-2 relative after:content-[''] after:absolute after:top-[40%] after:h-2 after:w-2 after:bg-primary-red after:rounded-[50%]"></span>
-					</p>
-					<span class="text-secundary-gblue">5m ago</span>
-				</div>
-			</article>
-			<article class="flex justify-start gap-4 p-3 mb-3 bg-secundary-lgblue1 rounded-lg">
-				<img class="h-10" src="./assets/images//avatar-jacob-thompson.webp" alt="Perfil de Jacob Thompson" />
-				<div>
-					<p class="text-secundary-dgblue font-[500] leading-5">
-						<span class="font-[800] text-black">Jacob Thompson</span> has joined your group <span class="text-primary-blue font-[800]">Chess Club</span
-						><span class="ml-2 relative after:content-[''] after:absolute after:top-[40%] after:h-2 after:w-2 after:bg-primary-red after:rounded-[50%]"></span>
-					</p>
-					<span class="text-secundary-gblue">1 day ago</span>
-				</div>
-			</article>
-			<article class="flex justify-start gap-4 p-3 mb-3">
-				<img class="h-10" src="./assets/images/avatar-rizky-hasanuddin.webp" alt="Perfil de Jacob Thompson" />
-				<div>
-					<p class="text-secundary-dgblue font-[500] leading-5"><span class="font-[800] text-black">Rizky Hasanuddin</span> sent you a private message</p>
-					<span class="text-secundary-gblue">5 days ago</span>
-					<p class="text-secundary-dgblue font-[500] leading-5 mt-4 border border-solid p-3.5 rounded-md">
-						Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game.
-					</p>
-				</div>
-			</article>
-			<article class="flex justify-start gap-4 p-3 mb-4">
-				<img class="h-10" src="./assets/images/avatar-kimberly-smith.webp" alt="Perfil de Kimberly Smith" />
-				<div>
-					<p class="text-secundary-dgblue font-[500] leading-5"><span class="font-[800] text-black">Kimberly Smith</span> commented on your picture</p>
-					<span class="text-secundary-gblue">1 week ago</span>
-				</div>
-				<img class="h-10" src="./assets/images/image-chess.webp" alt="Foto de mujer jugando ajedrez" />
-			</article>
-			<article class="flex justify-start gap-4 p-3 mb-3">
-				<img class="h-10" src="./assets/images/avatar-nathan-peterson.webp" alt="Perfil de Nathan Peterson" />
-				<div>
-					<p class="text-secundary-dgblue font-[500] leading-5">
-						<span class="font-[800] text-black">Nathan Peterson</span> reacted to your recent post <strong>5 end-game strategies to increase your win rate</strong>
-					</p>
-					<span class="text-secundary-gblue">2 weeks ago</span>
-				</div>
-			</article>
-			<article class="flex justify-start gap-4 p-3 mb-3">
-				<img class="h-10" src="./assets/images/avatar-anna-kim.webp" alt="Perfil de Anna Kim" />
-				<div>
-					<p class="text-secundary-dgblue font-[500] leading-5"><span class="font-[800] text-black">Anna Kim</span> left the group <span class="text-primary-blue font-[800]">Chess Club</span></p>
-					<span class="text-secundary-gblue">2 weeks ago</span>
-				</div>
-			</article>
-		</section>
-
-		<div class="attribution text-center text-secundary-dgblue font-[500] leading-5">
-			Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. <br />
-			Coded by <a href="https://github.com/jabssdev" target="_blank">JabssDev</a>.
 		</div>
 	</body>
 </html>
