refactor: :recycle: Move the index.html file to the root folder

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon" />
+		<link rel="shortcut icon" href="./src/assets/images/favicon.png" type="image/x-icon" />
 		<title>Notifications page | JabssDev</title>
-		<link rel="stylesheet" href="./output.css" />
+		<link rel="stylesheet" href="./src/output.css" />
 	</head>
 	<body class="py-6 px-4 sm:w-screen sm:flex sm:justify-center sm:bg-secundary-lgblue1">
 		<div class="container bg-white sm:max-w-[675px] sm:my-9 sm:px-6 sm:pt-6 sm:rounded-lg sm:shadow-md">
@@ -18,7 +18,7 @@
 			</header>
 			<section>
 				<article class="flex justify-start gap-4 p-3 mb-3 notification-active cursor-pointer">
-					<img class="h-10" src="./assets/images/avatar-mark-webber.webp" alt="Perfil de Mark Webber" />
+					<img class="h-10" src="./src/assets/images/avatar-mark-webber.webp" alt="Perfil de Mark Webber" />
 					<div>
 						<p class="text-secundary-dgblue font-[500] leading-5">
 							<span class="font-[800] text-black hover:text-primary-blue cursor-pointer">Mark Webber</span> reacted to your recent post
@@ -28,7 +28,7 @@
 					</div>
 				</article>
 				<article class="flex justify-start gap-4 p-3 mb-4 notification-active cursor-pointer">
-					<img class="h-10" src="./assets/images/avatar-angela-gray.webp" alt="Perfil de Angela Gray" />
+					<img class="h-10" src="./src/assets/images/avatar-angela-gray.webp" alt="Perfil de Angela Gray" />
 					<div>
 						<p class="text-secundary-dgblue font-[500] leading-5">
 							<span class="font-[800] text-black hover:text-primary-blue cursor-pointer">Angela Gray</span> followed you
@@ -38,7 +38,7 @@
 					</div>
 				</article>
 				<article class="flex justify-start gap-4 p-3 mb-3 notification-active cursor-pointer">
-					<img class="h-10" src="./assets/images//avatar-jacob-thompson.webp" alt="Perfil de Jacob Thompson" />
+					<img class="h-10" src="./src/assets/images//avatar-jacob-thompson.webp" alt="Perfil de Jacob Thompson" />
 					<div>
 						<p class="text-secundary-dgblue font-[500] leading-5">
 							<span class="font-[800] text-black hover:text-primary-blue cursor-pointer">Jacob Thompson</span> has joined your group
@@ -48,7 +48,7 @@
 					</div>
 				</article>
 				<article class="flex justify-start gap-4 p-3 mb-3 cursor-pointer">
-					<img class="h-10" src="./assets/images/avatar-rizky-hasanuddin.webp" alt="Perfil de Jacob Thompson" />
+					<img class="h-10" src="./src/assets/images/avatar-rizky-hasanuddin.webp" alt="Perfil de Jacob Thompson" />
 					<div>
 						<p class="text-secundary-dgblue font-[500] leading-5">
 							<span class="font-[800] text-black hover:text-primary-blue cursor-pointer">Rizky Hasanuddin</span> sent you a private message
@@ -62,7 +62,7 @@
 				</article>
 				<article class="flex justify-between mb-3 p-3 cursor-pointer">
 					<div class="flex justify-start gap-4">
-						<img class="h-10" src="./assets/images/avatar-kimberly-smith.webp" alt="Perfil de Kimberly Smith" />
+						<img class="h-10" src="./src/assets/images/avatar-kimberly-smith.webp" alt="Perfil de Kimberly Smith" />
 						<div>
 							<p class="text-secundary-dgblue font-[500] leading-5">
 								<span class="font-[800] text-black hover:text-primary-blue cursor-pointer">Kimberly Smith</span> commented on your picture
@@ -70,10 +70,10 @@
 							<span class="text-secundary-gblue">1 week ago</span>
 						</div>
 					</div>
-					<img class="h-10 hover:scale-105 cursor-pointer" src="./assets/images/image-chess.webp" alt="Foto de mujer jugando ajedrez" />
+					<img class="h-10 hover:scale-105 cursor-pointer" src="./src/assets/images/image-chess.webp" alt="Foto de mujer jugando ajedrez" />
 				</article>
 				<article class="flex justify-start gap-4 p-3 mb-3 cursor-pointer">
-					<img class="h-10" src="./assets/images/avatar-nathan-peterson.webp" alt="Perfil de Nathan Peterson" />
+					<img class="h-10" src="./src/assets/images/avatar-nathan-peterson.webp" alt="Perfil de Nathan Peterson" />
 					<div>
 						<p class="text-secundary-dgblue font-[500] leading-5">
 							<span class="font-[800] text-black hover:text-primary-blue cursor-pointer">Nathan Peterson</span> reacted to your recent post
@@ -83,7 +83,7 @@
 					</div>
 				</article>
 				<article class="flex justify-start gap-4 p-3 mb-3 cursor-pointer">
-					<img class="h-10" src="./assets/images/avatar-anna-kim.webp" alt="Perfil de Anna Kim" />
+					<img class="h-10" src="./src/assets/images/avatar-anna-kim.webp" alt="Perfil de Anna Kim" />
 					<div>
 						<p class="text-secundary-dgblue font-[500] leading-5">
 							<span class="font-[800] text-black hover:text-primary-blue cursor-pointer">Anna Kim</span> left the group
@@ -100,6 +100,6 @@
 				Coded by <a class="text-primary-blue font-[800]" href="https://github.com/jabssdev" target="_blank">JabssDev</a>.
 			</div>
 		</div>
-		<script src="./main.js"></script>
+		<script src="./src/main.js"></script>
 	</body>
 </html>
